# linux-parsers

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  future-tasks.md  pyproject.toml
.github/workflows/: lints.yml  publish.yml  release.yml  run_checks.yml  tests.yml
.instructions/: create-parser.md
linux_parsers/: __init__.py  command_detection.py  parsers_registry.py
linux_parsers/parsers/: exceptions.py
linux_parsers/parsers/filesystem/: __init__.py  df.py  dpkg.py  du.py  etc_fstab.py  fdisk.py  ls.py  mount.py  packages.py  rpm.py  stat.py
linux_parsers/parsers/logs/: __init__.py  _basic_log_parser.py  var_log_auth.py  var_log_cron.py  var_log_dpkg.py  var_log_maillog.py  var_log_messages.py  var_log_secure.py  var_log_syslog.py  var_log_udev.py  var_log_wtmp_btmp_utmp.py
linux_parsers/parsers/network/: __init__.py  arp.py  etc_resolve_conf.py  ip.py  iptables.py  netstat.py  ping.py  ss.py  ufw.py
linux_parsers/parsers/process/: cgroups.py  jobs.py  lsipc.py  mpstat.py  proc_modules.py  ps.py  top.py  vmstat.py
linux_parsers/parsers/session/: ac.py  last.py  w.py  who.py
linux_parsers/parsers/system/: etc_os_release.py  etc_systemd_file_conf.py  free.py  hwinfo.py  iostat.py  ldd.py  lsmod.py  mpstat.py  proc_cpuinfo.py  proc_devices.py  proc_meminfo.py  proc_uptime.py  proc_version.py  service.py  uname.py  useradd.py  vmstat.py
tests/: dynamic_tests.py  test_detections.py
tests/filesystem/: test_df.py  test_dpkg.py  test_du.py  test_etc_fstab.py  test_fdisk.py  test_ls.py  test_mount.py  test_pacakges.py  test_rpm.py  test_stat.py
tests/logs/: test_var_log_auth.py  test_var_log_cron.py  test_var_log_dpkg.py  test_var_log_maillog.py  test_var_log_messages.py  test_var_log_secure.py  test_var_log_syslog.py  test_var_log_udev.py
tests/network/: netstat.py  test_arp.py  test_etc_resolve_conf.py  test_ip.py  test_iptables.py  test_netstat.py  test_ping.py  test_ss.py  test_ufw.py  ufw.py
tests/process/: iostat.py  test_cgroups.py  test_jobs.py  test_lsipc.py  test_mpstat.py  test_proc_modules.py  test_ps.py  test_service.py  test_vmstat.py  top.py
tests/session/: test_ac.py  test_last.py  test_w.py  test_who.py
tests/system/: hwinfo.py  test_etc_os_release.py  test_etc_systemd.py  test_etc_systemd_file_conf.py  test_free.py  test_iostat.py  test_ldd.py  test_lsmod.py  test_mpstat.py  test_proc_cpuinfo.py  test_proc_devices.py  test_proc_meminfo.py  test_proc_uptime.py  test_proc_version.py  test_service.py  test_uname.py  test_useradd.py  test_vmstat.py
tests/users/: test_chage.py  test_etc_group.py  test_etc_gshadow.py  test_etc_passwd.py  test_etc_shadow.py  test_passwd.py  test_shadow.py  test_useradd.py
(+9 files in other folders)
