[project]
name = "linux-parsers"
version = "0.2.3"
requires-python = ">=3.8"
dependencies = [
    "setuptools>=75.3.2",
]
license = { text = "LICENSE" }
description = "Simplest library for parsing linux commands and files"
readme = { file = "README.txt", content-type = "text/markdown" }
keywords = ['linux', 'parser', 'command', 'file']
authors = [
    { name = "Yechiel Babani", email = "yechielb2000@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only"
]


[project.urls]
Repository = "https://github.com/yechielb2000/linux-parsers.git"
Issues = "https://github.com/yechielb2000/linux-parsers/issues"
Changelog = "https://github.com/yechielb2000/linux-parsers/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["./tests"]
filterwarnings = ["ignore:.*distutils Version classes.*packaging.version:DeprecationWarning:pytest_freezegun"]

[tool.ruff]
line-length = 120
target-version = "py38"
src = ["linux_parsers"]
exclude = ["tests"]

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
